--- a/RAV3-Inc/Assembly-CSharp.csproj
+++ b/RAV3-Inc/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\DragObject.cs" />
     <Compile Include="Assets\Scripts\Item.cs" />
     <Reference Include="UnityEngine">
       <HintPath>B:/Unity/UnityEditors/2019.4.18f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
