--- a/RAV3-Inc/Assembly-CSharp.csproj
+++ b/RAV3-Inc/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Scripts\Inventory.cs" />
     <Compile Include="Assets\Scripts\InventoryItem.cs" />
     <Compile Include="Assets\Scripts\Item.cs" />
+    <Compile Include="Assets\Scripts\SnapPoint.cs" />
     <Reference Include="UnityEngine">
       <HintPath>B:/Unity/UnityEditors/2019.4.18f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
