--- a/RAV3-Inc/Assembly-CSharp.csproj
+++ b/RAV3-Inc/Assembly-CSharp.csproj
@@ -62,11 +62,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\DragObject.cs" />
-    <Compile Include="Assets\Scripts\Inventory.cs" />
-    <Compile Include="Assets\Scripts\InventoryItem.cs" />
+    <Compile Include="Assets\Scripts\Components\DragObject.cs" />
+    <Compile Include="Assets\Scripts\GameSettings.cs" />
+    <Compile Include="Assets\Scripts\Inventory\Inventory.cs" />
+    <Compile Include="Assets\Scripts\Inventory\InventoryItem.cs" />
+    <Compile Include="Assets\Scripts\Inventory\SnapPoint.cs" />
     <Compile Include="Assets\Scripts\Item.cs" />
-    <Compile Include="Assets\Scripts\SnapPoint.cs" />
+    <Compile Include="Assets\Scripts\SceneStarter.cs" />
+    <Compile Include="Assets\Scripts\Server\Server.cs" />
     <Compile Include="Assets\Scripts\UI\InventoryCell.cs" />
     <Compile Include="Assets\Scripts\UI\InventoryUI.cs" />
     <Reference Include="UnityEngine">
